Fix mobile layout overflow and remove impact card hover effect

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,9 @@
 
   html {
     scroll-padding-top: 88px;
+    overflow-x: hidden;
+    width: 100%;
+    position: relative;
   }
 
   body {
@@ -27,6 +30,8 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     overflow-x: hidden;
+    width: 100%;
+    position: relative;
   }
 
   #root {
